--- a/css/styles.css
+++ b/css/styles.css
@@ -746,6 +746,7 @@ a:link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Button Text */
+  width: 105px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
