--- a/css/styles.css
+++ b/css/styles.css
@@ -537,16 +537,71 @@ a:link {
 }
 
 /* ==================== Subscribe============================== */
-.subscribe-paragraph {
-  color: var(--WHITE, #fff);
+.subscribe-block {
+  margin-left: 80px;
+}
 
-  /* Body Medium */
-  font-family: Roboto;
+.subscribe-paragraph {
+  color: #ffffff;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.32px;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.cta-footer-input {
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 16px;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.5; /* 200% */
+  letter-spacing: 0.04em;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.cta-footer-input-form {
+  display: flex;
+  gap: 24px;
+}
+
+.cta-footer-input:focus {
+  outline-color: transparent;
+  outline-offset: 1px;
+}
+
+.cta-footer-input::placeholder {
+  color: #ffffff;
+}
+
+.sub-button {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+}
+
+.sub-icon {
+  margin-left: 16px;
+  fill: #ffffff;
 }
 
 /* ==================== Backdrop Styles ========================= */
