--- a/css/styles.css
+++ b/css/styles.css
@@ -812,7 +812,7 @@ a:link {
   align-items: center;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  cursor: pointer;
   /* Button Text */
   width: 105px;
   font-size: 16px;
