--- a/css/styles.css
+++ b/css/styles.css
@@ -604,31 +604,6 @@ a:link {
   fill: #ffffff;
 }
 
-/* ==================== Backdrop Styles ========================= */
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 99999999;
-  background-color: rgba(46, 47, 66, 0.4);
-
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
 /* ================ Modal Window ======================== */
 .modal {
   position: absolute;
@@ -763,7 +738,33 @@ a:link {
 
 .cta-form-input:focus + .cta-form-input-icon {
   fill: #4d5ae5;
-} /* ====================== /Modal form STYLES======================= */
+}
+/* ==================== Backdrop Styles ========================= */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999999;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+/* ====================== /Modal form STYLES======================= */
 
 .cta-checkbox-wrapper {
   margin-bottom: 24px;
