--- a/css/styles.css
+++ b/css/styles.css
@@ -615,20 +615,27 @@ a:link {
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   top: 24px;
   right: 24px;
   width: 24px;
   height: 24px;
   background-color: #e7e9fc;
-  border: 4px rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   line-height: 0;
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn-icon {
@@ -652,7 +659,7 @@ a:link {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: -0.02em;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
 
@@ -672,6 +679,13 @@ a:link {
 .cta-form-textarea {
   display: block;
   margin-bottom: 4px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+  outline: transparent;
+}
+.txt {
+  margin-bottom: 16px;
 }
 
 .cta-form-input {
@@ -679,6 +693,7 @@ a:link {
   padding-left: 38px;
   width: 100%;
   height: 40px;
+  background-color: transparent;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -781,6 +796,9 @@ a:link {
   cursor: pointer;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cta-checkbox-label {
@@ -789,6 +807,7 @@ a:link {
   font-weight: 400;
   line-height: 1.2;
   letter-spacing: 0.04em;
+  line-height: 1.17;
 }
 .privacy-policy {
   color: #4d5ae5;
@@ -796,7 +815,8 @@ a:link {
 }
 
 .cta-checkbox:checked + .cta-checkbox-label .cta-own-checkbox {
-  background-color: #4d5ae5;
+  background-color: #404bbf;
+  border: none;
   fill: #f4f4fd;
 }
 
@@ -807,6 +827,7 @@ a:link {
 .cta-button {
   display: block;
   margin: auto;
+  min-width: 169px;
   background-color: #4d5ae5;
   padding: 16px 32px;
   border-radius: 4px;
