--- a/css/styles.css
+++ b/css/styles.css
@@ -646,6 +646,7 @@ a:link {
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
 
 .modal-close-btn:hover .modal-close-btn-icon,
@@ -684,9 +685,6 @@ a:link {
   background-color: transparent;
   outline: transparent;
 }
-.txt {
-  margin-bottom: 16px;
-}
 
 .cta-form-input {
   display: block;
@@ -696,7 +694,12 @@ a:link {
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cta-form-wrapper-txt {
+  margin-bottom: 16px;
 }
 
 .cta-form-input:focus {
@@ -715,12 +718,11 @@ a:link {
   padding: 8px 16px;
 
   color: rgba(46, 47, 66, 0.4);
-
+  line-height: 1.17;
   /* Small Text */
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: -0.04em;
+  letter-spacing: 0.04em;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
